--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <meta name="color-scheme" content="dark light" /> -->
-
     <link
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Raleway&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="manifest" href="manifest.json" />
+    <link
+      rel="shortcut icon"
+      href="./icons/main-icon.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Document</title>
+    <title>Affirmations</title>
   </head>
   <body>
     <div class="main">
