refined style, responsiveness, and new 'reload' button

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <meta name="color-scheme" content="dark light" /> -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Raleway&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
       rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
+      crossorigin="anonymous"
     />
     <link rel="manifest" href="manifest.json" />
     <link
@@ -25,7 +32,7 @@
         и нежных котусеничек.
       </div>
       <div class="renew-btn-container">
-        <a href="#" class="renew-btn">🔃</a>
+        <a href="#" class="renew-btn"><i class="fas fa-redo-alt"></i></a>
       </div>
     </div>
     <script type="module" src="./scripts/index.js"></script>
