fixed body margin; new initial affirmation

--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
   <body>
     <div class="main">
       <div class="hero-icon">✨</div>
-      <div class="card">
-        Все будет замечательно. Твоя жизнь будет полна славных солнечных деньков
-        и нежных котусеничек.
-      </div>
+      <div class="card">Все хорошо. Все будет еще лучше.</div>
       <div class="renew-btn-container">
         <a href="#" class="renew-btn"><i class="fas fa-redo-alt"></i></a>
       </div>
